k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onges-core-ingress
  namespace: onges-ns
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /onges(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: onges-core-api
                port: { number: 80 }
